{
    "name": "GameActions",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "0009a45c-987f-4c09-8608-8b35a6616ffd",
            "actions": [
                {
                    "name": "LeftThrottle",
                    "type": "Value",
                    "id": "d30a9b77-9489-487e-b707-44446b5b282d",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightThrottle",
                    "type": "Value",
                    "id": "d51e53a1-d468-41be-8e48-3e19d789998a",
                    "expectedControlType": "Axis",
                    "processors": "Normalize(max=1)",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b99b68b5-065c-4784-b3fe-9d5c45c19b2c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "766ec5a0-e75e-454e-a56a-0c24770e46a9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1fd2aba-384d-47b6-970d-1fc24c051a51",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40b75a64-55c1-4d97-b110-5695a6413fc3",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightThrottle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "f1b1d8b4-4722-4c1b-9ba4-4b639b71ce62",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "1fb9c25f-1e7e-415b-bba7-144c0e4a3680",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d0ea511-45a9-4c3f-826b-1b338e86e157",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e6f24dc-8c30-47e6-b263-d73e83477a47",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}